test/trivial/bradc/initvarsamename2.good
initvarsamename2.chpl:1: In function 'foo':
initvarsamename2.chpl:2: error: statement uses variable 'x' to define itself
initvarsamename2.chpl:2: note: the variable 'x' is used to define itself here
